mail, link done in botDiv in coll list and inner

--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -154,5 +154,5 @@
 </div>
 
 <!-- fixed div on selecting a collection -->
-<app-sel-itm-fxd-div [selArr]="selCntntArr" (delContent)="delContent(undefined)" [content]="true"
+<app-sel-itm-fxd-div [selArr]="selCntntArr" [type]="'content'" (delContent)="delContent(undefined)" [content]="true"
   (clrSelData)="clrSel()" *ngIf="selCntntArr.length > 0"></app-sel-itm-fxd-div>
