--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,41 +1,6 @@
 <div class="login-ui row mx-0 bg-white">
   <div class="col-md-6 p-0 d-none d-md-block">
-    <div id="hiforceCarousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#hiforceCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#hiforceCarousel" data-slide-to="1"></li>
-        <li data-target="#hiforceCarousel" data-slide-to="2"></li>
-        <li data-target="#hiforceCarousel" data-slide-to="3"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item img-1 active" data-interval="3000">
-          <div class="carousel-caption text-left">
-            <div class="pl-5 h1 num">1</div>
-          </div>
-        </div>
-        <div class="carousel-item img-2" data-interval="3000">
-          <div class="carousel-caption text-left">
-            <div class="pl-5 h1 num">2</div>
-          </div>
-        </div>
-        <div class="carousel-item img-3" data-interval="3000">
-          <div class="carousel-caption text-left">
-            <div class="pl-5 h1 num">3</div>
-          </div>
-        </div>
-        <div class="carousel-item img-4" data-interval="3000">
-          <div class="carousel-caption text-left">
-            <div class="pl-5 h1 num">4</div>
-          </div>
-        </div>
-      </div>
-      <div class="text mx-5 text-white">
-        <h2>Welcome</h2>
-        <p class="text-justify">The official Hi-Force app gives you instant access to important Hi-Force product
-          and
-          service information including catalogue pages, product animations and marketing content.</p>
-      </div>
-    </div>
+      <app-auth-slides></app-auth-slides>
   </div>
   <div class="col-md-6 align-self-center">
     <div *ngIf="resetPassForm">
