--- a/src/app/setting/division/division.component.html
+++ b/src/app/setting/division/division.component.html
@@ -16,14 +16,14 @@
             <h6 class="dropdown-item text-secondary">No Hubs Found</h6>
           </ng-template>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item text-primary curs-ptr" *ngIf="usrInfo && usrInfo.rid==1"
+          <a class="dropdown-item text-primary curs-ptr" *ngIf="usrInfo && (usrInfo.rid==1 || usrInfo.rid==2)"
             (click)="openModal(addDivision,'add')">
             Add New Hub
           </a>
         </div>
       </div>
     </div>
-    <div class="float-right" *ngIf="selHub && selHub.id && usrInfo && usrInfo.rid==1">
+    <div class="float-right" *ngIf="selHub && selHub.id && usrInfo && (usrInfo.rid==1 || usrInfo.rid==2)">
       <div class="dropdown">
         <button class="btn btn-light dropdown-toggle" type="button" id="cogDD" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
