--- a/src/app/shared/components/get-link/get-link.component.html
+++ b/src/app/shared/components/get-link/get-link.component.html
@@ -37,7 +37,7 @@
           <div class="d-flex bg-hi-grey border rounded px-3 py-1 my-2" *ngFor="let vs of viewSel">
             <div class="align-self-center">
               <img
-                src="{{vs.pdfImagePath ? vs.pdfImagePath : vs.pdfImage ? vs.pdfImage : vs.urlIconPath ? vs.urlIconPath : vs.contentPath ? vs.contentPath : defImg}}">
+                src="{{vs.pdfImagePath ? vs.pdfImagePath : vs.pdfImage ? vs.pdfImage : vs.imagePath ? vs.imagePath : vs.urlIconPath ? vs.urlIconPath : vs.contentPath ? vs.contentPath : defImg}}">
             </div>
             <div class="ml-2 align-self-center w-75">
               <div class="text-truncate">{{vs.name}}</div>
