--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -72,7 +72,7 @@
               <div class="btn my-1" (click)="cmnModal('addToCollection','',cntnt)">
                 <i class="fas fa-folder-plus"></i>
               </div>
-              <div class="btn" (click)="delContent(cntnt.contentId)">
+              <div class="btn" (click)="delContent(cntnt.id)">
                 <i class="fas fa-trash-alt"></i>
               </div>
             </div>
@@ -139,7 +139,7 @@
               <div class="btn" (click)="cmnModal('addToCollection')">
                 <i class="fas fa-folder-plus"></i>
               </div>
-              <div class="btn" (click)="delContent(cntnt.contentId)">
+              <div class="btn" (click)="delContent(cntnt.id)">
                 <i class="fas fa-trash-alt"></i>
               </div>
             </div>
