--- a/src/app/hub/content-workspace/content-workspace.component.scss
+++ b/src/app/hub/content-workspace/content-workspace.component.scss
@@ -98,6 +98,7 @@
   min-width: 150px;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
 .cdk-drag:not(.cdk-drag-dragging) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
@@ -110,4 +111,18 @@
   min-height: 50vh;
   max-height: 50vh;
   overflow-y: auto;
+}
+
+.grid-image {
+  min-height: 200px;
+  position: relative;
+
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-height: 200px;
+    max-width: 100%;
+  }
 }
