--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -78,7 +78,7 @@
                 <i class="fas fa-ellipsis-h"></i>
               </button>
               <div class="dropdown-menu" aria-labelledby="optDD">
-                <a class="dropdown-item curs-ptr" (click)="openModal(uplNewVer, 'newVer')">
+                <a class="dropdown-item curs-ptr" (click)="openModal(uplNewVer, 'newVer')" *ngIf="activeIndex==0">
                   <i class="fas fa-upload mr-1"></i>Upload new version
                 </a>
                 <a class="dropdown-item curs-ptr" *ngIf="rowInfo.contentPath" (click)="downloadFile()">
