--- a/src/app/web-app/resource/file/file.component.html
+++ b/src/app/web-app/resource/file/file.component.html
@@ -14,8 +14,7 @@
         <div class="text-secondary text-center">
           3.3 MB of 2 GB used
           <div class="progress mt-2" style="height:10px;">
-            <div class="progress-bar" role="progressbar" style="width: 1%;" aria-valuenow="3" aria-valuemin="0"
-              aria-valuemax="2048"></div>
+            <div class="progress-bar" role="progressbar" style="width: 1%;" aria-valuenow="3" aria-valuemin="0" aria-valuemax="2048"></div>
           </div>
         </div>
       </div>
@@ -25,13 +24,10 @@
       <h3 class="mb-4 clearfix heading align-self-center">
         <!-- My Files -->
         <div class="float-right d-flex">
-          <i *ngIf="files.length>0 || folders.length>0 || allFiles.length>0" class="fa mr-3 curs-ptr align-self-center"
-            [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}" (click)="switchView()"
-            matTooltip="{{view? 'List View' : 'Grid View'}}">
+          <i *ngIf="files.length>0 || folders.length>0 || allFiles.length>0" class="fa mr-3 curs-ptr align-self-center" [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}" (click)="switchView()" matTooltip="{{view? 'List View' : 'Grid View'}}">
           </i>
           <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="addBtnDD" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="addBtnDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Add
             </button>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="addBtnDD">
@@ -43,8 +39,7 @@
                 URL</a>
               <a class="dropdown-item curs-ptr" (click)="uploadBtn(uploadFile)"><i class="fa fa-upload mr-1"></i>
                 Upload from hard drive
-                <input type="file" style="display: none;" #uploadFile (change)="uplCntnt($event)"
-                  accept="{{fileExt.toString()}}" multiple>
+                <input type="file" style="display: none;" #uploadFile (change)="uplCntnt($event)" accept="{{fileExt.toString()}}" multiple>
               </a>
             </div>
           </div>
@@ -69,8 +64,7 @@
             <span class="text-primary curs-ptr">Date Modified<i class="fa fa-sort-down align-top ml-1"></i></span> -->
             Sort by:
             <span class="text-primary ml-2 curs-ptr" *ngFor="let c of cols, let i = index" (click)="sortChange(c, i)">
-              {{c.n}}<i class="fa ml-1"
-                [ngClass]="{'fa-sort-up align-bottom': c.asc, 'fa-sort-down align-top': !c.asc}"></i>
+              {{c.n}}<i class="fa ml-1" [ngClass]="{'fa-sort-up align-bottom': c.asc, 'fa-sort-down align-top': !c.asc}"></i>
             </span>
           </div>
           <!-- folders -->
@@ -82,14 +76,12 @@
                   <div class="name align-self-center px-0"><i class="fas fa-folder mr-1"></i>{{fl.name}}</div>
                   <div class="d-flex p-0 __options ml-auto">
                     <div class="_options">
-                      <div class="btn btn-light btn-sm mr-1"
-                        (click)="$event.stopPropagation();setSelRow(fldrModal,fl);"><i class="fas fa-edit"></i></div>
+                      <div class="btn btn-light btn-sm mr-1" (click)="$event.stopPropagation();setSelRow(fldrModal,fl);"><i class="fas fa-edit"></i></div>
                       <div class="btn btn-light btn-sm mr-1" (click)="$event.stopPropagation();delCntntOrFldr(fl,true)">
                         <i class="fas fa-trash-alt"></i>
                       </div>
                     </div>
-                    <mat-checkbox class="align-self-center" [checked]="fl.chk" (change)="selMe($event.checked, fl)"
-                      (click)="$event.stopPropagation();"></mat-checkbox>
+                    <mat-checkbox class="align-self-center" [checked]="fl.chk" (change)="selMe($event.checked, fl)" (click)="$event.stopPropagation();"></mat-checkbox>
                   </div>
                 </div>
               </div>
@@ -106,8 +98,7 @@
                   </div>
                   <div class="options rounded">
                     <div class="dropleft">
-                      <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                      <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-share-square"></i>
                       </button>
                       <div class="dropdown-menu" aria-labelledby="shareDD">
@@ -159,8 +150,11 @@
                 <th>
                   <mat-checkbox (change)="selAll($event.checked)"></mat-checkbox>
                 </th>
-                <th>Name<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                <th>Date Modified<i class="fas fa-sort-down ml-1 align-top"></i></th>
+                <th class="curs-ptr" *ngFor="let c of cols, let i = index" (click)="sortChange(c, i)">
+                  {{c.n}}<i class="fa ml-1" [ngClass]="{'fa-sort-up align-bottom': c.asc, 'fa-sort-down align-top': !c.asc}"></i>
+                </th>
+                <!-- <th>Name<i class="fas fa-sort-down ml-1 align-top"></i></th>
+                <th>Date Modified<i class="fas fa-sort-down ml-1 align-top"></i></th> -->
                 <th></th>
               </tr>
             </thead>
@@ -185,8 +179,7 @@
                 <td class="align-middle options">
                   <div class="d-flex">
                     <div class="dropleft" *ngIf="!aF.isFldr">
-                      <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                      <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-share-square"></i>
                       </button>
                       <div class="dropdown-menu" aria-labelledby="shareDD">
@@ -222,8 +215,7 @@
 </div>
 
 <!-- fixed sel item bootm div -->
-<app-sel-itm-fxd-div [selArr]="selData" [type]="'content'" [disable]="disableBtns"
-  (delContent)="delCntntOrFldr(undefined)" [content]="true" *ngIf="selData.length > 0" (clrSelData)="clrSel()">
+<app-sel-itm-fxd-div [selArr]="selData" [type]="'content'" [disable]="disableBtns" (delContent)="delCntntOrFldr(undefined)" [content]="true" *ngIf="selData.length > 0" (clrSelData)="clrSel()">
 </app-sel-itm-fxd-div>
 
 <!-- add folder -->
@@ -290,7 +282,7 @@
 <!-- share with colleagues -->
 <ng-template #shareColl let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Add URL</h4>
+    <h4 class="modal-title" id="modal-basic-title">Share With Colleagues</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -333,8 +325,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')"
-      [disabled]="!sharingValue.checked">Share</button>
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')" [disabled]="!sharingValue.checked">Share</button>
   </div>
 </ng-template>
 
@@ -356,8 +347,7 @@
         <div class="align-self-center">
           <div class="progress">
             <!-- style - wdth bar perc -->
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100"
-              aria-valuemin="0" aria-valuemax="100" style="width:100%">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
             </div>
           </div>
         </div>
