--- a/src/app/shared/components/add-to-coll/add-to-coll.component.html
+++ b/src/app/shared/components/add-to-coll/add-to-coll.component.html
@@ -9,11 +9,10 @@
   <div *ngIf="!collLoad">
   </div>
   <ul class="list-unstyled" *ngIf="!collLoad">
-    <!-- <li class="d-flex text-primary px-3 curs-ptr"> -->
-      <!-- (click)="collModal(collection, 'add')" -->
-      <!-- <div class="icon mr-2"><i class="fas fa-folder-plus" style="font-size:40px;"></i></div> -->
-      <!-- <div class="info align-self-center">Create a new Collection</div> -->
-    <!-- </li> -->
+    <li class="d-flex text-primary curs-ptr border-bottom px-2" (click)="addCntntColl()">
+      <div class="icon mr-2"><i class="fas fa-folder-plus" style="font-size:40px;"></i></div>
+      <div class="info align-self-center">Create a new Collection</div>
+    </li>
     <div id="coll-div" class="d-flex border-bottom p-2 dark-bg-hover" *ngFor="let coll of colls">
       <div class="icon align-self-center mr-2">
         <img [src]="coll.pdfImagePath?coll.pdfImagePath:fldrIcon" style="max-height:50px; width: 40px;">
